--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,11 @@ packages = [{include = "brain_games"}]
 
 [tool.poetry.scripts]
 brain-games="brain_games.scripts.brain_games:main"
-brain-even="brain_games.scripts.brain_even:main"
-brain-calc="brain_games.scripts.brain_calc:main"
-brain-gcd="brain_games.scripts.brain_gcd:main"
-brain-progression="brain_games.scripts.brain_progression:main"
-brain-prime="brain_games.scripts.brain_prime:main"
+brain-even="brain_games.scripts.brain_games:even"
+brain-calc="brain_games.scripts.brain_games:calc"
+brain-gcd="brain_games.scripts.brain_games:gcd"
+brain-progression="brain_games.scripts.brain_games:progression"
+brain-prime="brain_games.scripts.brain_games:prime"
 
 [tool.poetry.dependencies]
 python = "^3.10"
